@startuml entity-relation-mvp

title MVP

skinparam linetype ortho

entity "Store" {
*id
--
Name
Address
Postcode
City
Picture_url
Siren
Siret
IsActive
}

entity "Stock" {
*id
--
Quantity
--
Product_id <<FK>>
}

entity "Supplier" {
*id
--
Name
Address
Postcode
City
Phone_number
Picture_url
Siren
Siret
Contact
IsActive
--
Store_id <<FK>>
}

entity "Product" {
*id
--
Name
Code
Price
Picture_url
Nutri_score
Eco_score
Unit_packaging
Threshold
Ingredients
IsActive
--
Brand_id <<FK>>
Store_id <<FK>>
}

entity "Category" {
*id
--
Name
--
Aisle_id <<FK>>
}

entity "Product_Categories" {
Category_id <<FK>>
Product_id <<FK>>
}

entity "Product_Supplier" {
Purchase_price
--
Supplier_id <<FK>>
Product_id <<FK>>
}

entity "Aisle" {
*id
--
Name
--
Store_id <<FK>>
}

entity "Role" {
*id
--
Name
Permissions
--
Store_id <<FK>>
}


entity "User_aisles" {
Aisle_id <<FK>>
User_id <<FK>>
}

entity "User" {
*id
--
FirstName
LastName
Email
Picture_url
Password
IsActive
Refresh_token
--
Role_id <<FK>>
Store_id <<FK>>
}

entity "Brand" {
*id
--
Name
}


Stock }o..|| Product

User }o..|| Role
User }o..|| Store


Aisle ||..o{ Category
Aisle }o..|| Store
User_aisles }o..|| User
User_aisles }o..|| Aisle


Product ||..o{ Product_Categories
Category ||..o{ Product_Categories
Product ||..o{ Product_Supplier
Supplier ||..o{ Product_Supplier
Product }o..|| Brand
Product }o..|| Store


@enduml
